
CHANGES IN VERSION 0.99.5
------------------------

* CoNGAfy now can reduce the size of multiple dimensions using mean or distance. 

CHANGES IN VERSION 0.99.4
------------------------

* Added CoNGAfy() function to reduce RNA to a single cell per clonotype based on either mean expression or euclidean distance of the PCA.
* Changed normalization for length-based distance calculation, was effectively halving the true distance, over calling neighbors when using thresholding. 
* AA property normalization now uses Euclidean distance instead of cosine. Simplifies the normalization. 
* Removed the multicore parallelization, after implementing the above (and removing the over calling issue) the code is substantially faster when using thresholding!


CHANGES IN VERSION 0.99.3
------------------------

* Added clonalCommunity() function to allow for assignment and subsequent regression of feature space of groupings.
* Changed neighbor.manager. Reverted the nearest neighbor proximation to the original version which only randomizes clones. Threshold detection changed to use expand.grid() instead of looping through all barcodes. 
* Added support for aaReduction() and distReduction to the clonalCommunity() function
* Added multicore parallelization to aaProperty() and distanceMatrix() function to speed up reduction. On an object of 3200 cells, sped the calculation up 8x.

CHANGES IN VERSION 0.99.2
------------------------

* Added seed parameter to improve reproducibility 
* Added clone.proportion parameter to select for the relative number of duplicates to allow into nearest neighbor evaluation
* New internal function neighbor.manager - nearest neighbor approximation is now based on clone proportion (for clones), the remaining neighbors are randomized across unique clones in the vicinity of the clonotype/cell in question. 
* Modified Mean approach for aa.property now references the correct columns in generating output frame and the cosine distance function