@@ -57,7 +57,7 @@ maTrex <- function(sc,
                     AA.method = "auto",
                     n.trim = 0,
                     c.trim = 0,
-                    nearest.method = "nn",
+                    nearest.method = "threshold",
                     threshold = 0.85,
                     near.neighbor = 40,
                     add.INKT = TRUE,
@@ -153,7 +153,7 @@ runTrex <- function(sc,
                     AA.method = "auto",
                     n.trim = 0,
                     c.trim = 0,
-                    nearest.method = "nn",
+                    nearest.method = "threshold",
                     threshold = 0.85,
                     near.neighbor = 40,
                     add.INKT = TRUE,
